fix(Transactions): Fix vertical alignment
[Example Screenshot](https://d.sebbo.net/Shared-Image-2020-09-09-11-28-43-rHyp0MmdRtXTSuZSFwcRoLLfwOc5yPwHfqPqchQSAeG83QJo4hvgvSulvVDGt6TH5rKqfpFX3AsV1mmReBvOVlyrAkkplLoWTxtW.png)

--- a/src/scss/views/transactions.scss
+++ b/src/scss/views/transactions.scss
@@ -170,7 +170,6 @@
 
 
 	&__payee {
-		margin-top: 0.6em;
 		font-size: 0.8em;
 		color: lighten($text, 50);
 
